--- a/sections/banner/banner.html
+++ b/sections/banner/banner.html
@@ -551,7 +551,7 @@
         Built For Brands, Artists, And Creators.
       </p>
 
-      <div class="search-box-container">
+      <div class="search-box-container" id="hero-search-box">
         <textarea
           class="search-input"
           rows="2"
