--- a/sections/footer/footer.html
+++ b/sections/footer/footer.html
@@ -35,7 +35,7 @@
   right: 0;
   bottom: -20px;
   background-image: url('sections/footer/background.png');
-  background-size: 100% calc(100% + var(--footer-bottom-height) + 20px);
+  background-size: 100% auto;
   background-position: top left;
   background-repeat: no-repeat;
   opacity: 0.5;
@@ -175,7 +175,7 @@
   right: 0;
   bottom: 0;
   background-image: url('sections/footer/background.png');
-  background-size: 100% calc(var(--footer-main-height) + 100% + 20px);
+  background-size: 100% auto;
   background-position-x: left;
   background-position-y: calc(-1 * (var(--footer-main-height) + 20px));
   background-repeat: no-repeat;
