--- a/sections/eclipses-engine/eclipses-engine.html
+++ b/sections/eclipses-engine/eclipses-engine.html
@@ -219,7 +219,7 @@
 /* 主卡片容器 - Apple 式平滑缩放 */
 .tools-showcase__card--main {
   width: 550px;
-  height: 300px; 
+  height: 300px;
   border: none; /* 移除边框 */
   box-shadow: 0 20px 60px rgba(0, 0, 0, 0.7); /* 保留阴影，移除橙色光晕 */
   z-index: 1; /* 与左右卡片同层 */
@@ -228,6 +228,37 @@
   /* 移除 transition，改用 JS 直接控制以实现平滑跟随 */
   will-change: transform;
   transform: scale(1);
+}
+
+/* 主卡片视频 */
+.tools-showcase__card--main video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  user-select: none;
+  transition: opacity 0.4s ease;
+  opacity: 1;
+  cursor: pointer;
+}
+
+/* 视频暂停时的遮罩层提示 */
+.tools-showcase__card--main::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+  z-index: 1;
+}
+
+.tools-showcase__card--main.paused::after {
+  opacity: 1;
 }
 
 /* 主卡片图片 */
@@ -630,27 +661,35 @@
     <!-- 扑克牌堆叠轮播 -->
     <div class="tools-showcase__carousel-wrapper">
       <div class="tools-showcase__carousel" id="toolsCarousel">
-        <!-- 左侧堆叠（2张小卡片）- 负边距实现重叠 -->
+        <!-- 左侧堆叠（2个小视频卡片）- 负边距实现重叠 -->
         <div class="tools-showcase__side left" id="leftStack">
           <div class="tools-showcase__card tools-showcase__card--small">
-            <img src="" alt="" class="tools-showcase__card-image">
+            <video muted loop playsinline class="tools-showcase__card-video">
+              <source src="" type="video/mp4">
+            </video>
           </div>
           <div class="tools-showcase__card tools-showcase__card--small">
-            <img src="" alt="" class="tools-showcase__card-image">
+            <video muted loop playsinline class="tools-showcase__card-video">
+              <source src="" type="video/mp4">
+            </video>
           </div>
         </div>
 
-        <!-- 中央大卡片 -->
+        <!-- 中央大卡片 - 视频（悬浮播放）-->
         <div class="tools-showcase__center">
-          <div class="tools-showcase__card tools-showcase__card--main" id="mainCard">
-            <img src="" alt="" class="tools-showcase__card-image">
+          <div class="tools-showcase__card tools-showcase__card--main paused" id="mainCard">
+            <video muted loop playsinline id="mainVideo">
+              <source src="" type="video/mp4">
+            </video>
           </div>
         </div>
 
-        <!-- 右侧堆叠（1张竖向长方形卡片）- 负边距实现重叠 -->
+        <!-- 右侧堆叠（1个竖向长方形视频卡片）- 负边距实现重叠 -->
         <div class="tools-showcase__side right" id="rightStack">
           <div class="tools-showcase__card tools-showcase__card--small">
-            <img src="" alt="" class="tools-showcase__card-image">
+            <video muted loop playsinline class="tools-showcase__card-video">
+              <source src="" type="video/mp4">
+            </video>
           </div>
         </div>
       </div>
@@ -671,32 +710,48 @@
   'use strict';
 
   // ===== 工具数据配置 =====
-  // 使用当前模块目录内的 4 张主视觉图，并为不同分类调整顺序
-  const moduleImages = [
-    { url: 'sections/eclipses-engine/1.png', alt: 'Eclipses Engine Showcase 1' },
-    { url: 'sections/eclipses-engine/2.jpg', alt: 'Eclipses Engine Showcase 2' },
-    { url: 'sections/eclipses-engine/3.png', alt: 'Eclipses Engine Showcase 3' },
-    { url: 'sections/eclipses-engine/4.png', alt: 'Eclipses Engine Showcase 4' }
-  ];
-
-  const rotateImages = (offset = 0) =>
-    moduleImages.map((_, index) => {
-      const target = moduleImages[(index + offset) % moduleImages.length];
-      return { ...target };
-    });
-
+  // 每个分类包含:
+  // - mainVideo: 中央大卡片的视频路径
+  // - sideVideos: 周围3个小卡片的视频路径 (左侧2个 + 右侧1个)
   const toolsData = {
-    'image-generator': rotateImages(0),
-    'video-generator': rotateImages(1),
-    'timeline-editor': rotateImages(2),
-    'avatar': rotateImages(3)
+    'image-generator': {
+      mainVideo: { url: 'sections/eclipses-engine/image-generator/image-generator.mp4', alt: 'Image Generator' },
+      sideVideos: [
+        { url: 'sections/eclipses-engine/image-generator/image-generator-1.mp4', alt: 'Image Generator 1' },
+        { url: 'sections/eclipses-engine/image-generator/image-generator-2.mp4', alt: 'Image Generator 2' },
+        { url: 'sections/eclipses-engine/image-generator/image-generator-3.mp4', alt: 'Image Generator 3' }
+      ]
+    },
+    'video-generator': {
+      mainVideo: { url: 'sections/eclipses-engine/video-generator/video-generator.mp4', alt: 'Video Generator' },
+      sideVideos: [
+        { url: 'sections/eclipses-engine/video-generator/video-generator-1.mp4', alt: 'Video Generator 1' },
+        { url: 'sections/eclipses-engine/video-generator/video-generator-2.mp4', alt: 'Video Generator 2' },
+        { url: 'sections/eclipses-engine/video-generator/video-generator-3.mp4', alt: 'Video Generator 3' }
+      ]
+    },
+    'timeline-editor': {
+      mainVideo: { url: 'sections/eclipses-engine/timeline-editor/timeline-editor.mp4', alt: 'Timeline Editor' },
+      sideVideos: [
+        { url: 'sections/eclipses-engine/timeline-editor/timeline-editor-1.mp4', alt: 'Timeline Editor 1' },
+        { url: 'sections/eclipses-engine/timeline-editor/timeline-editor-2.mp4', alt: 'Timeline Editor 2' },
+        { url: 'sections/eclipses-engine/timeline-editor/timeline-editor-3.mp4', alt: 'Timeline Editor 3' }
+      ]
+    },
+    'avatar': {
+      mainVideo: { url: 'sections/eclipses-engine/avatar/avatar.mp4', alt: 'Avatar' },
+      sideVideos: [
+        { url: 'sections/eclipses-engine/avatar/avatar-1.mp4', alt: 'Avatar 1' },
+        { url: 'sections/eclipses-engine/avatar/avatar-2.mp4', alt: 'Avatar 2' },
+        { url: 'sections/eclipses-engine/avatar/avatar-3.mp4', alt: 'Avatar 3' }
+      ]
+    }
   };
 
   // ===== 状态管理 =====
   let currentTool = 'image-generator';
-  let currentIndex = 2; // 从中间开始（可见卡片索引：0,1,2,3）
   let isAnimating = false;
-  let currentCards = toolsData[currentTool];
+  let currentData = toolsData[currentTool];
 
   // ===== Apple 风格滚动劫持参数 =====
   let scrollAccumulator = 0; // 滚动累积器
@@ -721,15 +776,15 @@
   const showcaseSection = document.querySelector('.tools-showcase'); // 模块容器
   const carousel = document.getElementById('toolsCarousel'); // 轮播容器
   const mainCardContainer = document.getElementById('mainCard'); // 主卡片容器
-  const mainCard = document.querySelector('#mainCard img'); // 主卡片图片
+  const mainVideo = document.getElementById('mainVideo'); // 主卡片视频
   const leftSide = document.querySelector('#leftStack'); // 左侧容器
   const rightSide = document.querySelector('#rightStack'); // 右侧容器
-  const leftStack = document.querySelectorAll('#leftStack img');
-  const rightStack = document.querySelectorAll('#rightStack img');
+  const leftStackVideos = document.querySelectorAll('#leftStack video'); // 左侧视频
+  const rightStackVideos = document.querySelectorAll('#rightStack video'); // 右侧视频
   const tabs = document.querySelectorAll('.tools-showcase__tab');
   const runBtn = document.getElementById('runGenerator');
 
-  if (!showcaseSection || !carousel || !mainCardContainer || !mainCard || !runBtn) {
+  if (!showcaseSection || !carousel || !mainCardContainer || !mainVideo || !runBtn) {
     console.warn('[tools-showcase] 必要的 DOM 节点缺失，已跳过脚本初始化。');
     return;
   }
@@ -742,38 +797,54 @@
     updateCardsDisplay();
     updateResponsiveLayout();
     attachEventListeners();
+    initHoverVideoControl(); // 初始化悬浮播放控制
     updateScaleBasedOnScroll();
-  }
-
-  // ===== 获取可见卡片索引 =====
-  // 返回 [left-1, left-2, center, right-1] 的索引（左2张+中1张+右1张）
-  function getVisibleIndices() {
-    const total = currentCards.length;
-    return [
-      (currentIndex - 2 + total) % total,  // 左侧第一张
-      (currentIndex - 1 + total) % total,  // 左侧第二张
-      currentIndex,                        // 中央卡片
-      (currentIndex + 1) % total           // 右侧卡片
-    ];
   }
 
   // ===== 更新卡片显示 =====
   function updateCardsDisplay() {
-    const indices = getVisibleIndices();
+    const data = currentData;
 
-    // 更新左侧堆叠（2张卡片）
-    leftStack[0].src = currentCards[indices[0]].url;
-    leftStack[0].alt = currentCards[indices[0]].alt;
-    leftStack[1].src = currentCards[indices[1]].url;
-    leftStack[1].alt = currentCards[indices[1]].alt;
+    // 更新左侧堆叠（2个视频）
+    const leftVideo1Source = leftStackVideos[0].querySelector('source');
+    leftVideo1Source.src = data.sideVideos[0].url;
+    leftStackVideos[0].load();
+    leftStackVideos[0].play().catch(err => console.log('Left video 1 play error:', err));
 
-    // 更新中央卡片
-    mainCard.src = currentCards[indices[2]].url;
-    mainCard.alt = currentCards[indices[2]].alt;
+    const leftVideo2Source = leftStackVideos[1].querySelector('source');
+    leftVideo2Source.src = data.sideVideos[1].url;
+    leftStackVideos[1].load();
+    leftStackVideos[1].play().catch(err => console.log('Left video 2 play error:', err));
 
-    // 更新右侧卡片（只有1张）
-    rightStack[0].src = currentCards[indices[3]].url;
-    rightStack[0].alt = currentCards[indices[3]].alt;
+    // 更新中央视频（悬浮播放，不自动播放）
+    const mainVideoSource = mainVideo.querySelector('source');
+    mainVideoSource.src = data.mainVideo.url;
+    mainVideo.load();
+    mainCardContainer.classList.add('paused'); // 添加暂停状态
+
+    // 更新右侧卡片（1个视频）
+    const rightVideoSource = rightStackVideos[0].querySelector('source');
+    rightVideoSource.src = data.sideVideos[2].url;
+    rightStackVideos[0].load();
+    rightStackVideos[0].play().catch(err => console.log('Right video play error:', err));
+  }
+
+  // ===== 悬浮播放控制 =====
+  function initHoverVideoControl() {
+    if (!mainCardContainer || !mainVideo) return;
+
+    // 鼠标进入 - 播放视频
+    mainCardContainer.addEventListener('mouseenter', () => {
+      mainCardContainer.classList.remove('paused');
+      mainVideo.play().catch(err => console.log('Video play error:', err));
+    });
+
+    // 鼠标离开 - 暂停并重置到开头
+    mainCardContainer.addEventListener('mouseleave', () => {
+      mainCardContainer.classList.add('paused');
+      mainVideo.pause();
+      mainVideo.currentTime = 0; // 重置到开头
+    });
   }
 
   // ===== 根据屏幕宽度切换布局（JS + CSS 双保险）=====
@@ -855,30 +926,11 @@
   }
 
   // ===== 切换到下一张/上一张卡片 =====
+  // 注: 由于每个分类只有一个视频,这个函数已不再需要
+  // 保留空函数以兼容触摸事件调用
   function switchToCard(direction) {
-    if (isAnimating) return;
-
-    isAnimating = true;
-    const total = currentCards.length;
-
-    // 添加模糊切换效果
-    mainCardContainer.classList.add('switching');
-
-    // 在模糊时切换图片
-    setTimeout(() => {
-      currentIndex = (currentIndex + direction + total) % total;
-      updateCardsDisplay();
-    }, 150);
-
-    // 移除模糊效果，重置缩放
-    setTimeout(() => {
-      mainCardContainer.classList.remove('switching');
-      scrollAccumulator = 0;
-      targetScale = minScale;
-      currentScale = minScale;
-      applyScaleTransform(minScale);
-      isAnimating = false;
-    }, 300);
+    // 不执行任何操作
+    return;
   }
 
   // ===== 基于滚动位置计算缩放（不劫持滚动）=====
@@ -980,33 +1032,32 @@
 
     // 切换工具数据
     currentTool = toolName;
-    currentCards = toolsData[currentTool];
-    currentIndex = 2; // 重置到中间索引
+    currentData = toolsData[currentTool];
 
     // 重置滚动状态（但保持当前缩放）
     scrollAccumulator = 0;
     consecutiveScrollCount = 0;
 
-    // 使用图片交叉淡入淡出（避免闪烁）
+    // 使用淡入淡出切换（避免闪烁）
     isAnimating = true;
 
-    // 先将所有图片淡出
-    const allImages = carousel.querySelectorAll('.tools-showcase__card-image');
-    allImages.forEach(img => {
-      img.style.transition = 'opacity 0.2s ease';
-      img.style.opacity = '0';
+    // 先将所有视频淡出
+    const allVideos = carousel.querySelectorAll('video');
+    allVideos.forEach(video => {
+      video.style.transition = 'opacity 0.2s ease';
+      video.style.opacity = '0';
     });
 
-    // 在图片淡出后切换
+    // 在内容淡出后切换
     setTimeout(() => {
       updateCardsDisplay();
       // 保持当前缩放状态，不重置为 minScale
       applyScaleTransform(currentScale);
 
-      // 立即淡入新图片
+      // 立即淡入新视频
       setTimeout(() => {
-        allImages.forEach(img => {
-          img.style.opacity = '1';
+        allVideos.forEach(video => {
+          video.style.opacity = '1';
         });
 
         // 重新计算基于当前滚动位置的缩放
@@ -1014,8 +1065,8 @@
 
         // 动画完成后清理
         setTimeout(() => {
-          allImages.forEach(img => {
-            img.style.transition = '';
+          allVideos.forEach(video => {
+            video.style.transition = '';
           });
           isAnimating = false;
         }, 200);
