--- a/sections/workflow/workflow.html
+++ b/sections/workflow/workflow.html
@@ -77,12 +77,29 @@
   flex: 0.6 1 0; /* 未悬浮卡片收缩宽度 */
 }
 
-/* 卡片图片 */
-.workflow__card-image {
+/* 卡片图片/视频 */
+.workflow__card-image,
+.workflow__card-video {
   width: 100%;
   height: 100%;
   object-fit: cover;
   display: block;
+}
+
+/* 视频默认隐藏 */
+.workflow__card-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+/* 悬浮时显示视频 */
+.workflow__card:hover .workflow__card-video {
+  opacity: 1;
+  z-index: 1;
 }
 
 /* 步骤编号 - 固定在卡片底部左侧 */
@@ -392,13 +409,16 @@
     <!-- 卡片网格 -->
     <div class="workflow__cards">
       <!-- 卡片 1: Generative -->
-      <div class="workflow__card" data-step="generative">
+      <div class="workflow__card" data-step="generative" data-hover-video>
         <img
-          src="sections/workflow/1.png"
+          src="sections/workflow/generative.jpg"
           alt="Generative AI"
           class="workflow__card-image"
           loading="lazy"
         >
+        <video class="workflow__card-video" muted loop playsinline>
+          <source src="sections/workflow/generative.mp4" type="video/mp4">
+        </video>
         <div class="workflow__card-overlay"></div>
         <div class="workflow__card-content">
           <div class="workflow__card-title-wrapper">
@@ -412,13 +432,16 @@
       </div>
 
       <!-- 卡片 2: Storyboard -->
-      <div class="workflow__card" data-step="storyboard">
+      <div class="workflow__card" data-step="storyboard" data-hover-video>
         <img
-          src="sections/workflow/2.jpg"
+          src="sections/workflow/storyboard.jpg"
           alt="Storyboard"
           class="workflow__card-image"
           loading="lazy"
         >
+        <video class="workflow__card-video" muted loop playsinline>
+          <source src="sections/workflow/storyboard.mp4" type="video/mp4">
+        </video>
         <div class="workflow__card-overlay"></div>
         <div class="workflow__card-content">
           <div class="workflow__card-title-wrapper">
@@ -432,13 +455,16 @@
       </div>
 
       <!-- 卡片 3: Timeline -->
-      <div class="workflow__card" data-step="timeline">
+      <div class="workflow__card" data-step="timeline" data-hover-video>
         <img
-          src="sections/workflow/3.png"
+          src="sections/workflow/timeline.jpg"
           alt="Timeline"
           class="workflow__card-image"
           loading="lazy"
         >
+        <video class="workflow__card-video" muted loop playsinline>
+          <source src="sections/workflow/timeline.mp4" type="video/mp4">
+        </video>
         <div class="workflow__card-overlay"></div>
         <div class="workflow__card-content">
           <div class="workflow__card-title-wrapper">
@@ -452,13 +478,16 @@
       </div>
 
       <!-- 卡片 4: Assistant -->
-      <div class="workflow__card" data-step="assistant">
+      <div class="workflow__card" data-step="assistant" data-hover-video>
         <img
-          src="sections/workflow/4.png"
+          src="sections/workflow/assistant.jpg"
           alt="Assistant"
           class="workflow__card-image"
           loading="lazy"
         >
+        <video class="workflow__card-video" muted loop playsinline>
+          <source src="sections/workflow/assistant.mp4" type="video/mp4">
+        </video>
         <div class="workflow__card-overlay"></div>
         <div class="workflow__card-content">
           <div class="workflow__card-title-wrapper">
@@ -528,18 +557,39 @@
       }
     });
 
-    // 预留：未来可添加视频悬浮播放功能
-    // 参考 gallery 模块的实现
-    // const initVideoHover = () => { ... };
+    // 视频悬浮播放功能
+    const initVideoHover = () => {
+      const videoCards = document.querySelectorAll('[data-hover-video]');
 
-    // 预留：未来可添加点击展开详情功能
-    // cards.forEach(card => {
-    //   card.addEventListener('click', () => {
-    //     const step = card.dataset.step;
-    //     console.log(`Clicked on ${step}`);
-    //     // 处理点击事件
-    //   });
-    // });
+      videoCards.forEach(card => {
+        const video = card.querySelector('.workflow__card-video');
+
+        if (!video) return;
+
+        // 鼠标进入卡片时播放视频
+        card.addEventListener('mouseenter', () => {
+          video.play().catch(err => {
+            console.warn('Video play failed:', err);
+          });
+        });
+
+        // 鼠标离开卡片时暂停并重置视频
+        card.addEventListener('mouseleave', () => {
+          video.pause();
+          video.currentTime = 0;
+        });
+
+        // 视频加载错误处理
+        video.addEventListener('error', function() {
+          console.warn(`Failed to load video: ${this.src}`);
+        });
+      });
+
+      console.log(`✅ Initialized video hover for ${videoCards.length} cards`);
+    };
+
+    // 初始化视频悬浮播放
+    initVideoHover();
   };
 
   // DOM Ready 检测
